# learned-aggregator

./: .gitignore  BRIEF.md  README.md  pyproject.toml
.beads/: config.yaml  metadata.json
data/trajectories/: test.jsonl  train.jsonl  val.jsonl
data/trajectories_combined/: test.jsonl  val.jsonl
flows/: trajectory_corpus.yaml
flows/prompts/: math_system.yaml
results/: eval.json  eval_combined.json  kfold_cv.json
scripts/: evaluate.py  generate_trajectories.py  k_fold_cv.py  lm_server.py  merge_splits.py  rescore_trajectories.py  train_aggregator.py
src/learned_aggregator/: __init__.py  features.py  model.py
src/learned_aggregator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/learned_aggregator/blocks/: __init__.py  math_verify_answer.py  mlx_chat_block.py  mlx_prm_score.py  prm_score.py  trajectory_nonce.py
tests/: test_blocks.py  test_transformers_prm.py
