[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learned_aggregator"
version = "0.1.0"
description = "Learned trajectory aggregation for process reward models"
requires-python = ">=3.10"
dependencies = [
    "its_hub @ file://../its_hub",
    "torch>=2.0.0",
    "numpy",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "math-verify>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
